--- a/styles/general.css
+++ b/styles/general.css
@@ -111,16 +111,3 @@ body {
   background: var(--background);
   overflow-x: hidden;
 }
-
-::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 71, 1);
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 30px;
-  background-color: rgba(44, 19, 239, 1);
-}
